unpackaged/main/default/objects/Expense_Tracking__c/Expense_Tracking__c.object-meta.xml
<CustomObject>
    <label>Expense Tracking</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Expense Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>